docs(auth): support few docs for auth handler
